<resources>
    <string name="app_name">Gimnasio</string>

    <!--activity login-->

    <string name="logo_of_my_application">Logo of my application</string>
    <string name="username_or_email">Username or Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_create_one_here">Don\'t have an account? Create one here.</string>


    <!--activity register-->
    <string name="email">Email</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth (DD/MM/YYYY)</string>
    <string name="user_type">User Type:</string>
    <string name="register">REGISTER</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="username_identifier">Username (Identifier)</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="gym_logo">Gym Logo</string>
    <string name="go_back_to_login">Go back to Login</string>

    <!-->Config Spiner-->
    <string-array name="array_user_type">
        <item>User</item>
        <item>Trainer</item>
    </string-array>


    <!-- activity workouts-->
    <string name="title_workouts">Workouts</string>
    <string name="content_description_gym_logo">Gym Logo</string>
    <string name="hint_filter_level">Filter by Level</string>
    <string name="button_filter">Filter</string>
    <string name="button_profile">Profile</string>
    <string name="button_play">Play</string>
    <string name="button_back">Back</string>
    <string name="label_level">Level:</string>
    <string name="label_num_exercises">Exercises:</string>
    <string name="button_view_video_description">Watch Video</string>



    <!--Entrenador -->
    <string name="title_trainer_management">Trainer Management</string>
    <string name="hint_trainer_name">Name Workout</string>
    <string name="hint_trainer_level">Level (e.g., Basic, Advanced)</string>
    <string name="hint_num_exercises">Number of Exercises</string>
    <string name="hint_workout_video_link">Workout Video (URL)</string>
    <string name="button_add">ADD</string>
    <string name="button_modify">MODIFY</string>
    <string name="button_delete">DELETE</string>
    <string name="title_user_profile">Profile</string>


    <!--Profile-->
    <string name="hint_username_or_email">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="checkbox_remember_me">Remember Me</string>
    <string name="button_login">Log In</string>

    <string name="title_user_registration">New User Registration</string>
    <string name="hint_username_identifier">Username (Identifier)</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="label_user_type">User Type:</string>
    <string name="button_register">REGISTER</string>
    <string name="button_go_back_to_login">Go back to Login</string>

    <string name="hint_profile_login">Login (Identifier)</string>
    <string name="hint_profile_first_name">First Name</string>
    <string name="hint_profile_last_name">Last Name</string>
    <string name="hint_profile_email">Email</string>
    <string name="hint_profile_dob">Date of Birth (DD/MM/YYYY)</string>
    <string name="label_theme">Theme:</string>
    <string name="label_language">Language:</string>
    <string name="option_light_theme">Light</string>
    <string name="option_dark_theme">Dark</string>
    <string name="option_spanish">Spanish</string>
    <string name="option_english">English</string>
    <string name="button_back_to_workouts">Go back to Workouts</string>
    <string-array name="language_options">
        <item>english</item>
        <item>spanish</item>
    </string-array>

    <!--ViewHolder-->
    <string name="ID">ID</string>
    <string name="username">username</string>
    <string name="Password">Password</string>
    <string name="button_add_new_workout">new workout</string>
    <string name="button_save">Save</string>


</resources>