<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">

        <ImageView
            android:id="@+id/img_logo_gym"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description_gym_logo"
            android:src="@drawable/logo_gym"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title_trainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_trainer_management"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo_gym" />

        <ImageButton
            android:id="@+id/btn_profile_trainer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_profile"
            android:src="@mipmap/ic_person"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_trainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_title_trainer"
            app:layout_constraintVertical_bias="0.437"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edit_text_trainer_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="name"
            android:hint="@string/hint_trainer_name"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_trainer"
            tools:ignore="TooWide,TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edit_text_trainer_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/hint_trainer_level"
            android:inputType="textCapWords"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_trainer_name"
            tools:ignore="TooWide,TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edit_text_num_exercises"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/hint_num_exercises"
            android:inputType="number"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_trainer_level"
            tools:ignore="TooWide,TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/edit_text_workout_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/hint_workout_video_link"
            android:inputType="textUri"
            android:minHeight="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_num_exercises"
            tools:ignore="TooWide,TextContrastCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/button_add_trainer_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_workout_video"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_modify_trainer_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_modify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_add_trainer_data"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_delete_trainer_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_modify_trainer_data"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/button_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_delete_trainer_data"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>